--- a/frontend/src/app/components/MainPage/MainPage.html
+++ b/frontend/src/app/components/MainPage/MainPage.html
@@ -1,2 +1,4 @@
-<p>MainPage works!</p>
+<header class="header">
+    <h1 class="header__title">RADAR-Pulse</h1>
+</header>
 <router-outlet></router-outlet>
