--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -2,9 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
 }
 
 html {
+    min-height: 100%;
     height: 100%;
 }
 
