Фронтенд: создана прокручивающаяся лента новостей

--- a/frontend/src/app/components/MainPage/MainPage.html
+++ b/frontend/src/app/components/MainPage/MainPage.html
@@ -1,4 +1,6 @@
 <header class="header">
     <h1 class="header__title">RADAR-Pulse</h1>
 </header>
-<router-outlet></router-outlet>
+<main class="content">
+    <router-outlet></router-outlet>
+</main>
