--- a/frontend/src/app/components/MainPage/MainPage.less
+++ b/frontend/src/app/components/MainPage/MainPage.less
@@ -1,16 +1,25 @@
 :host {
     display: flex;
     flex-flow: column nowrap;
-    min-height: 100%;
-    height: 100%;
+    height: 100vh; 
+    min-height: 0;
 }
 
 .header {
     background-color: #1b1b1b;
     padding: 20px 30px;
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
 }
 
 .header__title {
     color: #ffffff;
     font-size: 24px;
+}
+
+.content {
+    flex-grow: 1;
 }
