--- a/frontend/src/app/components/MainPage/MainPage.less
+++ b/frontend/src/app/components/MainPage/MainPage.less
@@ -1,7 +1,7 @@
 :host {
     display: flex;
-    flex-flow: column nowrap;
-    height: 100vh; 
+    flex-direction: column;
+    height: 100vh;
     min-height: 0;
 }
 
@@ -13,6 +13,7 @@
     left: 0;
     right: 0;
     z-index: 1000;
+    flex-shrink: 0; 
 }
 
 .header__title {
@@ -21,5 +22,7 @@
 }
 
 .content {
-    flex-grow: 1;
+    flex: 1;
+    min-height: 0;
+    display: flex;
 }
