Фронтенд: каркас страницы новости

--- a/frontend/src/app/components/NewsPage/NewsPage.html
+++ b/frontend/src/app/components/NewsPage/NewsPage.html
@@ -2,7 +2,7 @@
   <tui-scrollbar class="news-feed__scroll-container">
     <div class="news-feed">
       <div class="news-feed__news">
-        @for (news of newsList; track news.id) {
+        @for (news of newsList(); track news.id) {
         <app-news-card [news]="news"></app-news-card>
         } @empty {
         <p>No news available.</p>
