--- a/frontend/src/app/components/NewsDetailsPage/NewsDetailsPage.html
+++ b/frontend/src/app/components/NewsDetailsPage/NewsDetailsPage.html
@@ -1,1 +1,10 @@
-<p>NewsDetailsPage works!</p>
+@if (news()) {
+    <span>{{ news().hotnessScore }}</span>
+    <span>{{ news().isConfirmed ? 'достоверно' : 'не проверено' }}</span>
+    <h1>{{ news().title }}</h1>
+    <p>{{ news().content }}</p>
+    <h3>Источники</h3>
+    @for (source of news().sources; track $index) {
+        <a href="{{ source.url }}" target="_blank">{{ source.url }}</a>
+    }
+}
